@@ -635,6 +635,7 @@ The following options are respected by the default library or multiple plugins:
 
 :add_script_name :: Prepend the SCRIPT_NAME for the request to paths.  This is
                     useful if you mount the app as a path under another app.
+:freeze_middleware :: Whether to freeze all middleware when building the rack app.
 :root :: Set the root path for the app.  This defaults to the current working
          directory of the process.
 :unsupported_block_result :: If set to :raise, raises an error if a match or
